Support building on macOS
Change-Id: Icf83a291c03bef8253d896be8a55454357554a83

--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,5 @@ simple-image-wall.js
 /build/tizen/tests-reel/*.dir
 /build/tizen/tests-reel/*.vcxproj
 /build/tizen/tests-reel/*.vcxproj.filters
-
+.clangd/
+compile_commands.json
