--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Common gitignore
 .cproject
 .project
 .settings
@@ -5,6 +6,10 @@
 Makefile.in
 Makefile
 BROWSE
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+install_manifest.txt
 *~
 *.pc
 *.o
@@ -18,7 +23,6 @@ BROWSE
 *.fodt
 *.test
 *.example
-dali-builder
 *.a
 *.apk
 *.ap_
@@ -33,15 +37,25 @@ dali-builder
 *.swp
 *.creator
 *.creator.user
+/docs/generated/*
+/build/tizen/doc
+/build/tizen/.cov
 /build/desktop
 /packaging/home*
+compile_commands.json
+.clangd
+/debugfiles.list
+/debuglinks.list
+/debugsources.list
+.clangd/
+*.vscode/
+*.cache/
+# dali-demo only
+dali-builder
 *.mo
 simple-image-wall.js
 /shared/resources-location.cpp
 /build/tizen/documentation.list
-/debugfiles.list
-/debuglinks.list
-/debugsources.list
 /com.samsung.dali-demo-debuginfo.manifest
 /com.samsung.dali-demo-debugsource.manifest
 /build/tizen/*.vcxproj
@@ -71,5 +85,3 @@ simple-image-wall.js
 /build/tizen/tests-reel/*.dir
 /build/tizen/tests-reel/*.vcxproj
 /build/tizen/tests-reel/*.vcxproj.filters
-.clangd/
-compile_commands.json
