Updating to latest CMake build

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Common gitignore
 .cproject
 .project
 .settings
@@ -5,6 +6,10 @@
 Makefile.in
 Makefile
 BROWSE
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+install_manifest.txt
 *~
 *.pc
 *.o
@@ -18,7 +23,6 @@ BROWSE
 *.fodt
 *.test
 *.example
-dali-builder
 *.a
 *.apk
 *.ap_
@@ -33,15 +37,55 @@ dali-builder
 *.swp
 *.creator
 *.creator.user
-*.spv
-*.b64
+/docs/generated/*
+/build/tizen/doc
+/build/tizen/.cov
 /build/desktop
 /packaging/home*
-*.mo
-demo-theme.json
-simple-image-wall.js
-/shared/resources-location.cpp
-/build/tizen/documentation.list
+compile_commands.json
+.clangd
 /debugfiles.list
 /debuglinks.list
 /debugsources.list
+.clangd/
+*.vscode/
+*.cache/
+# dali-demo only
+dali-builder
+*.mo
+simple-image-wall.js
+/shared/resources-location.cpp
+/build/tizen/documentation.list
+/com.samsung.dali-demo-debuginfo.manifest
+/com.samsung.dali-demo-debugsource.manifest
+/build/tizen/*.vcxproj
+/build/tizen/*.vcxproj.filters
+/build/tizen/.ninja_deps
+/build/tizen/.ninja_log
+/build/tizen/build.ninja
+/build/tizen/rules.ninja
+/build/tizen/builder/Debug/*
+/build/tizen/builder/Release/*
+/build/tizen/builder/*.dir
+/build/tizen/builder/*.vcxproj
+/build/tizen/builder/*.vcxproj.filters
+/build/tizen/demo/Debug/*
+/build/tizen/demo/Release/*
+/build/tizen/demo/*.dir
+/build/tizen/demo/*.vcxproj
+/build/tizen/demo/*.vcxproj.filters
+/build/tizen/examples/Debug/*
+/build/tizen/examples/Release/*
+/build/tizen/examples/*.dir
+/build/tizen/examples/*.vcxproj
+/build/tizen/examples/*.vcxproj.filters
+/build/tizen/examples-reel/Debug/*
+/build/tizen/examples-reel/Release/*
+/build/tizen/examples-reel/*.dir
+/build/tizen/examples-reel/*.vcxproj
+/build/tizen/examples-reel/*.vcxproj.filters
+/build/tizen/tests-reel/Debug/*
+/build/tizen/tests-reel/Release/*
+/build/tizen/tests-reel/*.dir
+/build/tizen/tests-reel/*.vcxproj
+/build/tizen/tests-reel/*.vcxproj.filters
