Using GLES shader for demo

--- a/resources/style/demo-theme.json.in
+++ b/resources/style/demo-theme.json.in
@@ -51,56 +51,24 @@
               {
                 "fragmentShaderSource":"tile-background-shader.frag",
                 "fragmentShader":[
-                  "AwIjBwAAAQAHAAgAXQAAAAAAAAARAAIAAQAAAAsABgABAAAAR0xTTC5zdGQu",
-"NDUwAAAAAA4AAwAAAAAAAQAAAA8ABwAEAAAABAAAAG1haW4AAAAADgAAAEkA",
-"AAAQAAMABAAAAAcAAAADAAMAAgAAAK4BAAAFAAQABAAAAG1haW4AAAAABQAF",
-"AAoAAABzVGV4dHVyZQAAAAAFAAUADgAAAHZUZXhDb29yZAAAAAUABgAcAAAA",
-"d3JhcFRleENvb3JkAAAAAAUABQAkAAAARnJhZ0RhdGEAAAAABgAFACQAAAAA",
-"AAAAdUNvbG9yAAAGAAcAJAAAAAEAAAB1Q3VzdG9tUG9zaXRpb24ABQADACYA",
-"AAAAAAAABQAEADoAAABjb2xvcgAAAAUABgA/AAAAcG9zaXRpb25XZWlnaHQA",
-"AAUABQBJAAAAZnJhZ0NvbG9yAAAARwAEAAoAAAAiAAAAAAAAAEcABAAKAAAA",
-"IQAAAAIAAABHAAMADgAAAAAAAABHAAQADgAAAB4AAAAAAAAARwADAA8AAAAA",
-"AAAARwADACAAAAAAAAAARwADACIAAAAAAAAASAAFACQAAAAAAAAAIwAAAAAA",
-"AABIAAUAJAAAAAEAAAAjAAAAEAAAAEcAAwAkAAAAAgAAAEcABAAmAAAAIgAA",
-"AAAAAABHAAQAJgAAACEAAAABAAAARwADADYAAAAAAAAARwADADcAAAAAAAAA",
-"RwAEAEkAAAAeAAAAAAAAABMAAgACAAAAIQADAAMAAAACAAAAFgADAAYAAAAg",
-"AAAAGQAJAAcAAAAGAAAAAQAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAGwADAAgA",
-"AAAHAAAAIAAEAAkAAAAAAAAACAAAADsABAAJAAAACgAAAAAAAAAXAAQADAAA",
-"AAYAAAACAAAAIAAEAA0AAAABAAAADAAAADsABAANAAAADgAAAAEAAAAXAAQA",
-"EAAAAAYAAAAEAAAAFQAEABIAAAAgAAAAAAAAACsABAASAAAAEwAAAAMAAAAr",
-"AAQABgAAABUAAAAXt9E4FAACABYAAAAgAAQAGwAAAAcAAAAMAAAAKwAEABIA",
-"AAAdAAAAAAAAACAABAAeAAAAAQAAAAYAAAArAAQABgAAACEAAAAAAIBAFwAE",
-"ACMAAAAGAAAAAwAAAB4ABAAkAAAAEAAAACMAAAAgAAQAJQAAAAIAAAAkAAAA",
-"OwAEACUAAAAmAAAAAgAAABUABAAnAAAAIAAAAAEAAAArAAQAJwAAACgAAAAB",
-"AAAAIAAEACkAAAACAAAABgAAACsABAASAAAALgAAAAIAAAArAAQABgAAADEA",
-"AAAAAABAKwAEABIAAAA0AAAAAQAAACAABAA5AAAABwAAABAAAAAgAAQAPgAA",
-"AAcAAAAGAAAAKwAEAAYAAABCAAAAmpmZPiAABABIAAAAAwAAABAAAAA7AAQA",
-"SAAAAEkAAAADAAAAKwAEAAYAAABNAAAAZmZmPysABAAnAAAATwAAAAAAAAAg",
-"AAQAUAAAAAIAAAAQAAAAKwAEAAYAAABXAAAAAAAAADYABQACAAAABAAAAAAA",
-"AAADAAAA+AACAAUAAAA7AAQAGwAAABwAAAAHAAAAOwAEADkAAAA6AAAABwAA",
-"ADsABAA+AAAAPwAAAAcAAAA9AAQACAAAAAsAAAAKAAAAPQAEAAwAAAAPAAAA",
-"DgAAAFcABQAQAAAAEQAAAAsAAAAPAAAAUQAFAAYAAAAUAAAAEQAAAAMAAAC8",
-"AAUAFgAAABcAAAAUAAAAFQAAAPcAAwAZAAAAAAAAAPoABAAXAAAAGAAAABkA",
-"AAD4AAIAGAAAAPwAAQD4AAIAGQAAAEEABQAeAAAAHwAAAA4AAAAdAAAAPQAE",
-"AAYAAAAgAAAAHwAAAIgABQAGAAAAIgAAACAAAAAhAAAAQQAGACkAAAAqAAAA",
-"JgAAACgAAAAdAAAAPQAEAAYAAAArAAAAKgAAAIgABQAGAAAALAAAACsAAAAh",
-"AAAAgQAFAAYAAAAtAAAAIgAAACwAAABBAAYAKQAAAC8AAAAmAAAAKAAAAC4A",
-"AAA9AAQABgAAADAAAAAvAAAAiAAFAAYAAAAyAAAAMAAAADEAAACBAAUABgAA",
-"ADMAAAAtAAAAMgAAAEEABQAeAAAANQAAAA4AAAA0AAAAPQAEAAYAAAA2AAAA",
-"NQAAAIgABQAGAAAANwAAADYAAAAhAAAAUAAFAAwAAAA4AAAAMwAAADcAAAA+",
-"AAMAHAAAADgAAAA9AAQACAAAADsAAAAKAAAAPQAEAAwAAAA8AAAAHAAAAFcA",
-"BQAQAAAAPQAAADsAAAA8AAAAPgADADoAAAA9AAAAQQAGACkAAABAAAAAJgAA",
-"ACgAAAA0AAAAPQAEAAYAAABBAAAAQAAAAIEABQAGAAAAQwAAAEEAAABCAAAA",
-"QQAFAD4AAABEAAAAOgAAAB0AAAA9AAQABgAAAEUAAABEAAAAhQAFAAYAAABG",
-"AAAAQwAAAEUAAACFAAUABgAAAEcAAABGAAAAMQAAAD4AAwA/AAAARwAAAD0A",
-"BAAGAAAASgAAAD8AAAA9AAQABgAAAEsAAAA/AAAAPQAEAAYAAABMAAAAPwAA",
-"AFAABwAQAAAATgAAAEoAAABLAAAATAAAAE0AAABBAAUAUAAAAFEAAAAmAAAA",
-"TwAAAD0ABAAQAAAAUgAAAFEAAACFAAUAEAAAAFMAAABOAAAAUgAAAEEABQBQ",
-"AAAAVAAAACYAAABPAAAAPQAEABAAAABVAAAAVAAAAE8ACAAjAAAAVgAAAFUA",
-"AABVAAAAAAAAAAEAAAACAAAAUQAFAAYAAABYAAAAVgAAAAAAAABRAAUABgAA",
-"AFkAAABWAAAAAQAAAFEABQAGAAAAWgAAAFYAAAACAAAAUAAHABAAAABbAAAA",
-"WAAAAFkAAABaAAAAVwAAAIEABQAQAAAAXAAAAFMAAABbAAAAPgADAEkAAABc",
-"AAAA/QABADgAAQA="
+                  "  varying mediump vec2  vTexCoord;",
+                  "  uniform lowp    vec4  uColor;",
+                  "  uniform sampler2D     sTexture;",
+                  "  uniform mediump vec3  uCustomPosition;",
+                  "",
+                  "  void main()",
+                  "  {",
+                  "    if( texture2D( sTexture, vTexCoord ).a <= 0.0001 )",
+                  "    {",
+                  "      discard;",
+                  "    }",
+                  "",
+                  "    mediump vec2 wrapTexCoord = vec2( ( vTexCoord.x / 4.0 ) + ( uCustomPosition.x / 4.0 ) + ( uCustomPosition.z / 2.0 ), vTexCoord.y / 4.0 );",
+                  "    mediump vec4 color = texture2D( sTexture, wrapTexCoord );",
+                  "    mediump float positionWeight = ( uCustomPosition.y + 0.3 ) * color.r * 2.0;",
+                  "",
+                  "    gl_FragColor = vec4( positionWeight, positionWeight, positionWeight, 0.9 ) * uColor + vec4( uColor.xyz, 0.0 );",
+                  "  }"
                 ]
               }
             }
@@ -122,57 +90,25 @@
               "shader":
               {
                 "fragmentShader":[
-                  "AwIjBwAAAQAHAAgAXQAAAAAAAAARAAIAAQAAAAsABgABAAAAR0xTTC5zdGQu",
-"NDUwAAAAAA4AAwAAAAAAAQAAAA8ABwAEAAAABAAAAG1haW4AAAAADgAAAEkA",
-"AAAQAAMABAAAAAcAAAADAAMAAgAAAK4BAAAFAAQABAAAAG1haW4AAAAABQAF",
-"AAoAAABzVGV4dHVyZQAAAAAFAAUADgAAAHZUZXhDb29yZAAAAAUABgAcAAAA",
-"d3JhcFRleENvb3JkAAAAAAUABQAkAAAARnJhZ0RhdGEAAAAABgAFACQAAAAA",
-"AAAAdUNvbG9yAAAGAAcAJAAAAAEAAAB1Q3VzdG9tUG9zaXRpb24ABQADACYA",
-"AAAAAAAABQAEADoAAABjb2xvcgAAAAUABgA/AAAAcG9zaXRpb25XZWlnaHQA",
-"AAUABQBJAAAAZnJhZ0NvbG9yAAAARwAEAAoAAAAiAAAAAAAAAEcABAAKAAAA",
-"IQAAAAIAAABHAAMADgAAAAAAAABHAAQADgAAAB4AAAAAAAAARwADAA8AAAAA",
-"AAAARwADACAAAAAAAAAARwADACIAAAAAAAAASAAFACQAAAAAAAAAIwAAAAAA",
-"AABIAAUAJAAAAAEAAAAjAAAAEAAAAEcAAwAkAAAAAgAAAEcABAAmAAAAIgAA",
-"AAAAAABHAAQAJgAAACEAAAABAAAARwADADYAAAAAAAAARwADADcAAAAAAAAA",
-"RwAEAEkAAAAeAAAAAAAAABMAAgACAAAAIQADAAMAAAACAAAAFgADAAYAAAAg",
-"AAAAGQAJAAcAAAAGAAAAAQAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAGwADAAgA",
-"AAAHAAAAIAAEAAkAAAAAAAAACAAAADsABAAJAAAACgAAAAAAAAAXAAQADAAA",
-"AAYAAAACAAAAIAAEAA0AAAABAAAADAAAADsABAANAAAADgAAAAEAAAAXAAQA",
-"EAAAAAYAAAAEAAAAFQAEABIAAAAgAAAAAAAAACsABAASAAAAEwAAAAMAAAAr",
-"AAQABgAAABUAAAAXt9E4FAACABYAAAAgAAQAGwAAAAcAAAAMAAAAKwAEABIA",
-"AAAdAAAAAAAAACAABAAeAAAAAQAAAAYAAAArAAQABgAAACEAAAAAAIBAFwAE",
-"ACMAAAAGAAAAAwAAAB4ABAAkAAAAEAAAACMAAAAgAAQAJQAAAAIAAAAkAAAA",
-"OwAEACUAAAAmAAAAAgAAABUABAAnAAAAIAAAAAEAAAArAAQAJwAAACgAAAAB",
-"AAAAIAAEACkAAAACAAAABgAAACsABAASAAAALgAAAAIAAAArAAQABgAAADEA",
-"AAAAAABAKwAEABIAAAA0AAAAAQAAACAABAA5AAAABwAAABAAAAAgAAQAPgAA",
-"AAcAAAAGAAAAKwAEAAYAAABCAAAAmpmZPiAABABIAAAAAwAAABAAAAA7AAQA",
-"SAAAAEkAAAADAAAAKwAEAAYAAABNAAAAZmZmPysABAAnAAAATwAAAAAAAAAg",
-"AAQAUAAAAAIAAAAQAAAAKwAEAAYAAABXAAAAAAAAADYABQACAAAABAAAAAAA",
-"AAADAAAA+AACAAUAAAA7AAQAGwAAABwAAAAHAAAAOwAEADkAAAA6AAAABwAA",
-"ADsABAA+AAAAPwAAAAcAAAA9AAQACAAAAAsAAAAKAAAAPQAEAAwAAAAPAAAA",
-"DgAAAFcABQAQAAAAEQAAAAsAAAAPAAAAUQAFAAYAAAAUAAAAEQAAAAMAAAC8",
-"AAUAFgAAABcAAAAUAAAAFQAAAPcAAwAZAAAAAAAAAPoABAAXAAAAGAAAABkA",
-"AAD4AAIAGAAAAPwAAQD4AAIAGQAAAEEABQAeAAAAHwAAAA4AAAAdAAAAPQAE",
-"AAYAAAAgAAAAHwAAAIgABQAGAAAAIgAAACAAAAAhAAAAQQAGACkAAAAqAAAA",
-"JgAAACgAAAAdAAAAPQAEAAYAAAArAAAAKgAAAIgABQAGAAAALAAAACsAAAAh",
-"AAAAgQAFAAYAAAAtAAAAIgAAACwAAABBAAYAKQAAAC8AAAAmAAAAKAAAAC4A",
-"AAA9AAQABgAAADAAAAAvAAAAiAAFAAYAAAAyAAAAMAAAADEAAACBAAUABgAA",
-"ADMAAAAtAAAAMgAAAEEABQAeAAAANQAAAA4AAAA0AAAAPQAEAAYAAAA2AAAA",
-"NQAAAIgABQAGAAAANwAAADYAAAAhAAAAUAAFAAwAAAA4AAAAMwAAADcAAAA+",
-"AAMAHAAAADgAAAA9AAQACAAAADsAAAAKAAAAPQAEAAwAAAA8AAAAHAAAAFcA",
-"BQAQAAAAPQAAADsAAAA8AAAAPgADADoAAAA9AAAAQQAGACkAAABAAAAAJgAA",
-"ACgAAAA0AAAAPQAEAAYAAABBAAAAQAAAAIEABQAGAAAAQwAAAEEAAABCAAAA",
-"QQAFAD4AAABEAAAAOgAAAB0AAAA9AAQABgAAAEUAAABEAAAAhQAFAAYAAABG",
-"AAAAQwAAAEUAAACFAAUABgAAAEcAAABGAAAAMQAAAD4AAwA/AAAARwAAAD0A",
-"BAAGAAAASgAAAD8AAAA9AAQABgAAAEsAAAA/AAAAPQAEAAYAAABMAAAAPwAA",
-"AFAABwAQAAAATgAAAEoAAABLAAAATAAAAE0AAABBAAUAUAAAAFEAAAAmAAAA",
-"TwAAAD0ABAAQAAAAUgAAAFEAAACFAAUAEAAAAFMAAABOAAAAUgAAAEEABQBQ",
-"AAAAVAAAACYAAABPAAAAPQAEABAAAABVAAAAVAAAAE8ACAAjAAAAVgAAAFUA",
-"AABVAAAAAAAAAAEAAAACAAAAUQAFAAYAAABYAAAAVgAAAAAAAABRAAUABgAA",
-"AFkAAABWAAAAAQAAAFEABQAGAAAAWgAAAFYAAAACAAAAUAAHABAAAABbAAAA",
-"WAAAAFkAAABaAAAAVwAAAIEABQAQAAAAXAAAAFMAAABbAAAAPgADAEkAAABc",
-"AAAA/QABADgAAQA="
-                ]
+                  "  varying mediump vec2  vTexCoord;",
+                  "  uniform lowp    vec4  uColor;",
+                  "  uniform sampler2D     sTexture;",
+                  "  uniform mediump vec3  uCustomPosition;",
+                  "",
+                  "  void main()",
+                  "  {",
+                  "    if( texture2D( sTexture, vTexCoord ).a <= 0.0001 )",
+                  "    {",
+                  "      discard;",
+                  "    }",
+                  "",
+                  "    mediump vec2 wrapTexCoord = vec2( ( vTexCoord.x / 4.0 ) + ( uCustomPosition.x / 4.0 ) + ( uCustomPosition.z / 2.0 ), vTexCoord.y / 4.0 );",
+                  "    mediump vec4 color = texture2D( sTexture, wrapTexCoord );",
+                  "    mediump float positionWeight = ( uCustomPosition.y + 0.3 ) * color.r * 2.0;",
+                  "",
+                  "    gl_FragColor = vec4( positionWeight, positionWeight, positionWeight, 0.9 ) * uColor + vec4( uColor.xyz, 0.0 );",
+                  "  }"
+]
               }
             }
           }
